--- a/src/scss/block/text.scss
+++ b/src/scss/block/text.scss
@@ -18,10 +18,13 @@
 				vertical-align: top; position: relative; 
 			}
 			.marker {
-				.icon { position: absolute; left: 50%; top: 50%; }
+				.icon { position: absolute; left: 50%; top: 50%; display: block; }
+				.number { display: none; vertical-align: middle; line-height: 1; }
 			}
 			
 			.marker.bullet.c1 {
+				.icon { display: none; }
+				.number { display: inline-block; }
 			}
 			.marker.bullet.c2 {
 				.icon { width: 6px; height: 6px; background: $colorBlack; border-radius: 100%; margin: -3px 0px 0px -3px; }
