--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -30,7 +30,8 @@ input, textarea, select { font-family: 'Lcg'; }
 #drag { -webkit-app-region: drag; position: fixed; top: 0px; left: 0px; width: 100%; height: 36px; z-index: -1; user-select: none; }
 
 .dn { display: none !important; }
-.txt { vertical-align: middle; display: inline-block; }
+.txt { vertical-align: middle; display: inline-block; line-height: 1; }
+.flex { display: flex; }
 
 .fileWrap { position: relative; overflow: hidden; cursor: pointer; }
 .fileWrap { 
