--- a/src/scss/page/main/edit.scss
+++ b/src/scss/page/main/edit.scss
@@ -1,7 +1,9 @@
 @import "~scss/_vars";
 
 .pageMainEdit {
-	.wrapper { padding: 94px; }
+	.wrapper { width: 800px; margin: 100px auto; }
 	.title { line-height: 48px; margin-bottom: 18px; }
 	.smile { margin-right: 8px; }
+	
+	.blocks { margin-left: -50px; }
 }
