--- a/src/scss/component/dragLayer.scss
+++ b/src/scss/component/dragLayer.scss
@@ -1,5 +1,5 @@
-.dragLayer { position: fixed; z-index: 1000; left: 2px; top: 2px; display: none; }
-.dragLayer.show { display: block; }
+.dragLayer { position: fixed; z-index: 1000; left: -10000px; top: -10000px; }
+.dragLayer.show { left: 2px; top: 2px; }
 .dragLayer {
 	.blocks { margin: 0px !important; }
 	.blocks {
