--- a/src/scss/block/common.scss
+++ b/src/scss/block/common.scss
@@ -15,7 +15,11 @@
 	.block:hover > .wrapMenu > .icon.dnd { opacity: 1; }
 	.block.isDragging  > .wrapMenu > .icon.dnd { opacity: 1; }
 	
-	.block > .wrapContent > .dropTarget.isOver { background: rgba(0,200,0,0.3); }
+	.block > .wrapContent > .dropTarget.isOver.middle { background: rgba(255,187,44,0.3); }
+	.block > .wrapContent > .dropTarget.isOver.top { box-shadow: 0px -2px $colorOrange; }
+	.block > .wrapContent > .dropTarget.isOver.bottom { box-shadow: 0px 2px $colorOrange; }
+	.block > .wrapContent > .dropTarget.isOver.left { box-shadow: -2px 0px $colorOrange; }
+	.block > .wrapContent > .dropTarget.isOver.right { box-shadow: 2px 0px $colorOrange; }
 	
 	.block.blockDiv {
 		.div { height: 1px; background: #d2d0c2; margin: 8px 0px; }
