--- a/src/scss/component/dragLayer.scss
+++ b/src/scss/component/dragLayer.scss
@@ -4,5 +4,6 @@
 	.blocks { margin: 0px !important; }
 	.blocks {
 		.block { background: #fff; box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2); border: 0px; }
+		.block .wrapMenu > .icon.dnd { opacity: 1; }
 	}
 }
