--- a/src/scss/block/common.scss
+++ b/src/scss/block/common.scss
@@ -15,7 +15,7 @@
 	
 	.block:hover > .wrapMenu > .icon.dnd { opacity: 1; }
 	.block.isDragging { opacity: 0.3; }
-	.block.isSelected > .wrapContent { background: #f7f5f0; }
+	.block > .wrapContent.isSelected { background: #f7f5f0; }
 	
 	.block.blockDiv {
 		.div { height: 1px; background: #d2d0c2; margin: 8px 0px; }
