--- a/src/scss/page/main/edit.scss
+++ b/src/scss/page/main/edit.scss
@@ -1,6 +1,6 @@
 @import "~scss/_vars";
 
 .pageMainEdit {
-	.wrapper { width: 800px; margin: 100px auto; }
+	.wrapper { width: 800px; margin: 0px auto; padding: 100px 0px; }
 	.blocks { margin-left: -50px; }
 }
