--- a/src/scss/menu/dataview/property.scss
+++ b/src/scss/menu/dataview/property.scss
@@ -7,6 +7,7 @@
 			.icon.property { width: 16px; }
 			.icon.plus { width: 12px; height: 12px; background-image: url('~img/icon/block/dataview/plus/light0.svg'); }
 			.switch { position: absolute; right: 16px; top: 50%; margin-top: -8px; }
+			.name { width: calc(100% - 73px); }
 		}
 		.item.add { color: #aca996; }
 	}
