--- a/src/scss/component/selection.scss
+++ b/src/scss/component/selection.scss
@@ -2,5 +2,7 @@
 
 .selection { position: relative; user-select: none; }
 .selection {
-	#rect { border: 1px dotted $colorBlack; position: fixed; left: 0px; top: 0px; width: 0px; height: 0px; display: none; }
+	#rect { 
+		border: 1px dotted $colorBlack; position: fixed; left: 0px; top: 0px; width: 0px; height: 0px; display: none; z-index: 1; 
+	}
 }
