--- a/src/scss/component/tag.scss
+++ b/src/scss/component/tag.scss
@@ -5,13 +5,13 @@
 .tag {
 	.inner { display: inline-block; width: 100%; overflow: hidden; vertical-align: top; }
 }
-.tag.grey { color: #aca996; background: #f7f5f0; }
-.tag.yellow { color: #b3a211; background: #fff7ad; }
-.tag.orange { color: #d3720d; background: #ffeec2; }
-.tag.red { color: #e1320a; background: #ffe5de; }
-.tag.pink { color: #d90a50; background: #fee2eb; }
-.tag.purple { color: #b740cd; background: #f7e6fa; }
-.tag.blue { color: #3e58e9; background: #e6e8f9; }
-.tag.ice { color: #1092d9; background: #d3f0fe; }
-.tag.teal { color: #0fb194; background: #dbf4f0; }
-.tag.lime { color: #80b822; background: #e6f5ce; }
+.tag.grey { color: #8c9ea5; background: #ebeff1; }
+.tag.yellow { color: #b2a616; background: #fbf5b8; }
+.tag.orange { color: #d3720d; background: #ffEcc8; }
+.tag.red { color: #e2400c; background: #ffe5de; }
+.tag.pink { color: #ca1b8e; background: #fddcf2; }
+.tag.purple { color: #9e30c4; background: #f1dbf8; }
+.tag.blue { color: #3e58eb; background: #dce1fb; }
+.tag.ice { color: #1c8bca; background: #cfedfe; }
+.tag.teal { color: #0caaa3; background: #d4f5f3; }
+.tag.lime { color: #64b90f; background: #e3f7d0; }
