--- a/src/scss/block/common.scss
+++ b/src/scss/block/common.scss
@@ -1,8 +1,9 @@
 @import "~scss/_vars";
 
 .blocks {
-	.block { padding: 1px 0px; word-break: break-word; display: flex; flex: auto; }
+	.block { padding: 1px 0px; word-break: break-word; display: flex; flex: auto; position: relative; }
 	.block {
+		.id { position: absolute; left: 50px; top: 1px; z-index: 2; }
 		.wrapMenu { width: 50px; }
 		.wrapContent { width: calc(100% - 50px); position: relative; }
 		
