--- a/src/scss/block/text.scss
+++ b/src/scss/block/text.scss
@@ -3,10 +3,11 @@
 .blocks {
 	.block.blockText { word-wrap: break-word; }
 	.block.blockText {
-		.wrap { flex: auto; }
+		.wrap { flex: auto; position: relative; }
 		.value { -webkit-user-modify: read-write-plaintext-only; }
 		
-		.p {  }
+		.placeHolder { color: #adaa95; position: absolute; z-index: 0; left: 0px; top: 0px; display: none; }
+		
 		.h1 { font-size: 28px; line-height: 32px; letter-spacing: -0.36px; font-weight: 600; }
 		.h2 { font-size: 21px; line-height: 28px; letter-spacing: -0.16px; font-weight: 600; }
 		.h3 { font-size: 18px; line-height: 26px; letter-spacing: -0.08px; font-weight: 600; }
@@ -46,6 +47,10 @@
 				.icon { background-image: url('~img/icon/marker/check1.svg'); }
 			}
 		}
+	}
+	
+	.block.blockText.isFocused {
+		.placeHolder { display: block; }
 	}
 	
 	.block.blockText.canToggle {
