--- a/src/scss/block/common.scss
+++ b/src/scss/block/common.scss
@@ -4,14 +4,16 @@
 	.block { padding: 1px 0px; word-break: break-word; display: flex; flex: auto; position: relative; }
 	.block {
 		.id { position: absolute; left: 50px; top: 1px; z-index: 2; }
-		.wrapMenu { width: 50px; }
+		.wrapMenu { width: 50px; text-align: right; }
 		.wrapContent { width: calc(100% - 50px); position: relative; }
 		
 		.flex { position: relative; z-index: 1; }
 		.icon.dnd { 
-			width: 24px; height: 24px; background-size: 7px 12px; background-image: url('~img/icon/dnd.svg');
-			opacity: 0; cursor: move; vertical-align: top;
+			width: 12px; height: 24px; background-size: 2px 8px; background-image: url('~img/icon/block/menu0.svg');
+			opacity: 0; cursor: move; vertical-align: top; border: 1px solid #d2d0c2; border-radius: 12px; height: 100%;
+			transition: $transitionFast; margin-right: 8px;
 		}
+		.icon.dnd:hover { background-image: url('~img/icon/block/menu1.svg'); border: 2px solid $colorOrange; }
 		
 		.colResize { width: 0px; position: relative; }
 		.colResize {
@@ -22,6 +24,10 @@
 	}
 	
 	.block.isResizing { cursor: col-resize; user-select: none; }
+	
+	.block.showMenu > .wrapMenu > .icon.dnd { opacity: 1; }
+	.block.isAdding.top > .wrapContent > .dropTarget { box-shadow: 0px -2px $colorOrange; }
+	.block.isAdding.bottom > .wrapContent > .dropTarget { box-shadow: 0px 2px $colorOrange; }
 	
 	.block:hover > .wrapMenu > .icon.dnd { opacity: 1; }
 	.block > .wrapContent.isDragging { opacity: 0.3; }
