--- a/src/scss/menu/common.scss
+++ b/src/scss/menu/common.scss
@@ -44,7 +44,8 @@
 		.item:hover { background: #56554f; }
 		.item.active { background: $colorBlack; }
 		
-		.icon { margin-right: 8px; }
+		.icon { width: 24px; height: 24px; margin-right: 8px; }
+		
 		.icon.dnd { width: 7px; height: 12px; background-image: url('~img/icon/dnd.svg'); margin-right: 10px; }
 		.icon.delete { 
 			width: 18px; height: 18px; background-size: 10px 10px; background-image: url('~img/icon/menu/delete0.svg'); cursor: pointer;
@@ -64,6 +65,16 @@
 		
 		.icon { width: 24px; height: 24px; margin-right: 16px; cursor: pointer; }
 		.icon:last-child { margin: 0px; }
+		
+		.icon {
+			.arrow { 
+				width: 4px; height: 8px; background-image: url('~img/arrow/subMenu0.svg'); position: absolute; right: -10px; top: 50%; 
+				margin-top: -4px; transform: rotateZ(90deg); 
+			}
+		}
+		.icon:hover, .icon.active {
+			.arrow { background-image: url('~img/arrow/subMenu1.svg'); }
+		}
 	}
 	
 	.menu.light { padding: 8px 0px; background: #fff; color: $colorBlack; border-radius: 8px; }
@@ -156,8 +167,7 @@
 	
 	.icon.chat { background-size: 18px 20px; background-image: url('~img/icon/menu/help/chat0.svg'); }
 	.icon.feature { background-size: 22px 21px; background-image: url('~img/icon/menu/help/feature0.svg'); }
-	.icon.community { background-size: 18px 16px; background-image: url('~img/icon/menu/help/community0.svg'); }		
-
+	.icon.community { background-size: 18px 16px; background-image: url('~img/icon/menu/help/community0.svg'); }
 }
 
 .menuMain {
