--- a/src/scss/popup/settings.scss
+++ b/src/scss/popup/settings.scss
@@ -60,7 +60,7 @@
 		
 		.phrase {
 			.label { margin-bottom: 25px; }
-			.textArea { border-radius: 4px; padding: 24px 32px; }
+			.textarea { border-radius: 4px; padding: 24px 32px; }
 		}
 		
 		.pinSelect, .pinConfirm {
