code block with syntax highlight

--- a/src/scss/block/text.scss
+++ b/src/scss/block/text.scss
@@ -12,7 +12,7 @@
 		.h2 { font-size: 21px; line-height: 28px; letter-spacing: -0.16px; font-weight: 600; }
 		.h3 { font-size: 18px; line-height: 26px; letter-spacing: -0.08px; font-weight: 600; }
 		.h4 { font-size: 18px; line-height: 26px; letter-spacing: -0.08px; }
-		.quote { font-size: 13px; line-height: 22px; letter-spacing: 0.08px; }
+		.quote { font-family: 'Mono'; line-height: 1.71; padding: 16px 24px; display: block; background: #f7f5f0; }
 		
 		.markers { white-space: nowrap; }
 		.markers {
