--- a/src/scss/component/inputWithFile.scss
+++ b/src/scss/component/inputWithFile.scss
@@ -1,7 +1,7 @@
 @import "~scss/_vars";
 
 .inputWithFile {
-	line-height: 24px; padding: 11px; border-radius: 4px; border: solid 1px #d2d0c2; color: #adaa95;
+	line-height: 24px; padding: 11px; height: 48px; border-radius: 4px; border: solid 1px #d2d0c2; color: #adaa95;
 	transition: background 0.2s ease-in-out; white-space: nowrap; overflow: hidden;
 }
 .inputWithFile:hover { background: #f7f5f0; }
