block page, block fields

--- a/src/scss/block/text.scss
+++ b/src/scss/block/text.scss
@@ -14,6 +14,7 @@
 		.h4 { font-size: 18px; line-height: 26px; letter-spacing: -0.08px; }
 		.quote { font-size: 13px; line-height: 22px; letter-spacing: 0.08px; }
 		.code { font-family: 'Mono'; line-height: 1.71; padding: 16px 24px; background: rgba(247,245,240,0.5); }
+		a { cursor: pointer; }
 		
 		.markers { white-space: nowrap; }
 		.markers {
