--- a/src/scss/block/page.scss
+++ b/src/scss/block/page.scss
@@ -5,7 +5,7 @@
 	.block.blockPage {
 		.name {
 			display: inline-block; vertical-align: top; height: 22px; letter-spacing: 0.1px; max-width: calc(100% - 28px); border-bottom: 1px solid #aca996;
-			padding-top: 1px; overflow: hidden;
+			padding-top: 1px; overflow: hidden; cursor: pointer;
 		}
 	}
 }
