--- a/src/scss/block/common.scss
+++ b/src/scss/block/common.scss
@@ -29,10 +29,13 @@
 	.block.isAdding.top > .wrapContent > .selectable > .dropTarget { box-shadow: 0px -2px $colorOrange; }
 	.block.isAdding.bottom > .wrapContent > .selectable > .dropTarget { box-shadow: 0px 2px $colorOrange; }
 	
+	.block.canToggle > .wrapContent > .children { display: none; }
+	.block.isToggled > .wrapContent > .children { display: block; }
+	.block.isToggled > .wrapContent > .selectable > .dropTarget > .flex > .markers > .marker.toggle { transform: rotateZ(90deg); }
+	
 	.block:hover > .wrapMenu > .icon.dnd { opacity: 1; }
 	.block > .wrapContent > .selectable.isDragging > .dropTarget { opacity: 0.3; }
 	.block > .wrapContent > .selectable.isSelected > .dropTarget { background: #f7f5f0; }
-	
 	
 	.block.blockDiv {
 		.dropTarget { padding: 8px 0px; }
