--- a/src/scss/component/dragLayer.scss
+++ b/src/scss/component/dragLayer.scss
@@ -3,6 +3,6 @@
 .dragLayer {
 	.blocks { margin: 0px !important; }
 	.blocks {
-		.block { background: #fff; box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2); border: 0px; }
+		.block { background: #fff; box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2); border: 0px; width: 100% !important; }
 	}
 }
