implemented config rpc with homeId for multipaging

--- a/src/scss/popup/editor/page.scss
+++ b/src/scss/popup/editor/page.scss
@@ -4,6 +4,6 @@
 	.popup.popupEditorPage { width: 1010px; height: calc(100% - 20px); padding: 40px; }
 	.popup.popupEditorPage {
 		.content { max-height: 100%; overflow-x: hidden; overflow-y: auto; }
-		.header { position: absolute; }
+		.header { position: absolute; padding: 0px; }
 	}	
 }
