--- a/src/scss/component/progress.scss
+++ b/src/scss/component/progress.scss
@@ -1,11 +1,20 @@
-.progress { position: fixed; left: 0px; top: 0px; z-index: 100; width: 100%; height: 100%; background: rgba(0,0,0,0.1); }
+.progress { 
+	position: fixed; left: 0px; top: 0px; z-index: 110; width: 100%; height: 100%; background: rgba(0,0,0,0.1);
+	transition: background 0.2s ease-in-out; 
+}
 .progress {
 	.inner { 
 		position: absolute; left: 50%; top: 50%; box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.3); height: 40px; line-height: 40px;
 		border-radius: 4px; width: 224px; text-align: center; background: #393834; overflow: hidden; margin: -20px 0px 0px -112px;
+		transition: opacity 0.2s ease-in-out, transform 0.2s ease-in-out;
 	}
 	.inner {
 		.label { position: absolute; left: 0px; top: 0px; width: 100%; z-index: 1; color: #fff; }
 		.bar { background: #6a6962; height: 100%; position: absolute; left: 0px; top: 0px; }
 	}
+}
+
+.progress.hide { background: rgba(0,0,0,0); }
+.progress.hide {
+	.inner { opacity: 0; transform: scale3d(0.8,0.8,1); }
 }
